# skate

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cpp  scene.h  shader.cpp
data/models/medieval_village/: license.txt  scene.gltf
glsl/: basic_vertex.glsl  color_fragment.glsl  color_vertex.glsl  normal_fragment.glsl  normal_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl
glsl/common/: color_uniforms.glsl  depth.glsl  fragment.glsl  geometry.glsl  global.glsl  light.glsl  material.glsl  material_map.glsl  stencil.glsl  vertex.glsl
glsl/flat/fragment/: basic.glsl
glsl/flat/vertex/: basic.glsl
glsl/fragment/: border_shader.glsl  color.glsl  color_shader.glsl  color_vertex.glsl  light_vertex.glsl  material.glsl  material_shader.glsl  material_vertex.glsl  normal_vector_shader.glsl  texture.glsl  texture_shader.glsl  texture_vertex.glsl
glsl/geometry/: explode.glsl  normal_vector_shader.glsl  pass_through.glsl
glsl/gouraud/fragment/: material.glsl  normal.glsl  texture.glsl
glsl/gouraud/vertex/: color.glsl  material.glsl  normal.glsl  texture.glsl
glsl/phong/fragment/: color.glsl  lighting_map.glsl  material.glsl  normal.glsl  texture.glsl
glsl/phong/vertex/: lighting_map.glsl  material.glsl  normal.glsl
glsl/vertex/: border_shader.glsl  color.glsl  color_border_shader.glsl  color_shader.glsl  color_vertex.glsl  light_shader.glsl  material_shader.glsl  material_vertex.glsl  normal_vector_shader.glsl  texture.glsl  texture_border_shader.glsl  texture_shader.glsl  texture_vertex.glsl
lib/assimp_model/: assimp_model.cpp  assimp_model.h
lib/camera/: camera.cpp  camera.h
lib/common/: CMakeLists.txt  common.cpp  common.h
lib/config/: CMakeLists.txt  config.h
lib/ebo/: CMakeLists.txt  ebo.cpp  ebo.h
lib/error/: CMakeLists.txt  error.cpp  error.h
lib/exception/: CMakeLists.txt  exception.cpp  exception.h
lib/glad/: CMakeLists.txt  glad.h
lib/input_handler/: CMakeLists.txt  input_handler.cpp  input_handler.h
lib/json/: CMakeLists.txt  json.cpp
lib/light/: directional_light.cpp  directional_light.h  light.cpp  light.h  light_caster.cpp  light_caster.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
lib/material/: material.h
lib/mesh/: CMakeLists.txt  color_mesh.cpp  color_mesh.h  material_mesh.cpp  material_mesh.h  mesh.cpp  mesh.h  texture_mesh.cpp  texture_mesh.h
lib/model/: CMakeLists.txt  model.cpp  model.h
lib/object_pool/: CMakeLists.txt  object.h  object_pool.cpp  object_pool.h
lib/observer_subject/: observer_subject.cpp  observer_subject.h
lib/scene/: CMakeLists.txt  scene.h
lib/shader/: shader.cpp  shader.h
lib/stb/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
lib/texture/: CMakeLists.txt  texture2D.cpp  texture2D.h
lib/util/: util.cpp  util.h
lib/vao/: CMakeLists.txt  vao.cpp  vao.h
lib/vbo/: CMakeLists.txt  vbo.cpp  vbo.h
lib/vertex/: vertex.h
src/assimp_model/: CMakeLists.txt  assimp_model.cpp  assimp_model.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/config/: CMakeLists.txt  config.h
src/exception/: exception.cpp  exception.h
src/glad/: CMakeLists.txt  glad.c
src/input_handler/: CMakeLists.txt  input_handler.cpp  input_handler.h
src/light/: CMakeLists.txt  directional_light.cpp  directional_light.h  light_caster.cpp  light_caster.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
src/loadable_model/: CMakeLists.txt  loadable_color_model.cpp  loadable_color_model.h  loadable_texture_model.cpp  loadable_texture_model.h
src/material/: CMakeLists.txt  material.h
src/mesh/: CMakeLists.txt  color_mesh.cpp  color_mesh.h  light_mesh.cpp  light_mesh.h  material_mesh.cpp  material_mesh.h  mesh.h  texture_mesh.cpp  texture_mesh.h
src/model/: CMakeLists.txt  model.cpp  model.h
src/object_pool/: CMakeLists.txt  object.h  object_pool.cpp  object_pool.h
src/observer_subject/: CMakeLists.txt  observer_subject.cpp  observer_subject.h
src/render_state/: CMakeLists.txt  render_state.cpp  render_state.h
src/renderable/: CMakeLists.txt  renderable.cpp  renderable.h
src/scene/: scene.h
src/shader/: CMakeLists.txt  shader.cpp  shader.h
src/texture/: CMakeLists.txt  texture.cpp  texture.h  texture2D.cpp  texture2D.h
src/transform/: CMakeLists.txt  transform.cpp  transform.h
src/util/: CMakeLists.txt  util.cpp  util.h
src/vertex/: CMakeLists.txt  vertex.h
